tests/invalid/unresolved_symbol.ar
fn main() {
    const a = b;
}

//! tests/invalid/unresolved_symbol.ar:2:15: error: unresolved symbol `b`
